{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 507,
  "lineage": "33d14ed6-f924-554d-73e8-ad010eb12012",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/frontendIPConfigurations/web-lb-public-ip-1",
                "name": "web-lb-public-ip-1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/publicIPAddresses/web-lb-public-ip"
              }
            ],
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb",
            "location": "eastus",
            "name": "web-lb",
            "resource_group_name": "rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/web-backend",
            "loadbalancer_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb",
            "name": "web-backend"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/probes/tcp-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb",
            "name": "tcp-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.web_lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/web-backend"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/frontendIPConfigurations/web-lb-public-ip-1",
            "frontend_ip_configuration_name": "web-lb-public-ip-1",
            "frontend_port": 80,
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/loadBalancingRules/web-app1-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb",
            "name": "web-app1-rule",
            "probe_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/probes/tcp-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.web_lb_public_ip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkInterfaces/bastion-linuxvm-nic",
            "internal_domain_name_suffix": "l2qj2mcf2zculfgdstadeaewvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-linuxvm-ip",
                "primary": true,
                "private_ip_address": "10.0.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/publicIPAddresses/bastion-linuxvm-public-ip",
                "subnet_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/bastionsubnet"
              }
            ],
            "location": "eastus",
            "name": "bastion-linuxvm-nic",
            "private_ip_address": "10.0.100.4",
            "private_ip_addresses": [
              "10.0.100.4"
            ],
            "resource_group_name": "rg"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_linuxvm_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nic-0",
            "internal_domain_name_suffix": "l2qj2mcf2zculfgdstadeaewvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/websubnet"
              }
            ],
            "location": "eastus",
            "name": "web-linuxvm-nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nic-1",
            "internal_domain_name_suffix": "l2qj2mcf2zculfgdstadeaewvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuxvm-ip-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/websubnet"
              }
            ],
            "location": "eastus",
            "name": "web-linuxvm-nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web_nic_lb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/web-backend",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nic-0/ipConfigurations/web-linuxvm-ip-1|/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linuxvm-ip-1",
            "network_interface_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nic-0"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lb_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/web-backend",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nic-1/ipConfigurations/web-linuxvm-ip-1|/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/web-backend",
            "ip_configuration_name": "web-linuxvm-ip-1",
            "network_interface_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkInterfaces/web-linuxvm-nic-1"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.web_lb_backend_address_pool",
            "azurerm_network_interface.web_linuxvm_nic",
            "azurerm_public_ip.web_lb_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg",
            "location": "eastus",
            "name": "appsubnet-nsg",
            "resource_group_name": "rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg",
            "location": "eastus",
            "name": "bastionsubnet-nsg",
            "resource_group_name": "rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/dbsubnet-nsg",
            "location": "eastus",
            "name": "dbsubnet-nsg",
            "resource_group_name": "rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg",
            "location": "eastus",
            "name": "websubnet-nsg",
            "resource_group_name": "rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_inbound_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg/securityRules/rule-port-80",
            "name": "rule-port-80",
            "network_security_group_name": "appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg/securityRules/rule-port-443",
            "name": "rule-port-443",
            "network_security_group_name": "appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg/securityRules/rule-port-8080",
            "name": "rule-port-8080",
            "network_security_group_name": "appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg/securityRules/rule-port-22",
            "name": "rule-port-22",
            "network_security_group_name": "appsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_inbound_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg/securityRules/rule-port-22",
            "name": "rule-port-22",
            "network_security_group_name": "bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg/securityRules/rule-port-3389",
            "name": "rule-port-3389",
            "network_security_group_name": "bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_inbound_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/dbsubnet-nsg/securityRules/rule-port-3306",
            "name": "rule-port-3306",
            "network_security_group_name": "dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/dbsubnet-nsg/securityRules/rule-port-1433",
            "name": "rule-port-1433",
            "network_security_group_name": "dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/dbsubnet-nsg/securityRules/rule-port-5432",
            "name": "rule-port-5432",
            "network_security_group_name": "dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_inbound_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/rule-port-80",
            "name": "rule-port-80",
            "network_security_group_name": "websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/rule-port-443",
            "name": "rule-port-443",
            "network_security_group_name": "websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg/securityRules/rule-port-22",
            "name": "rule-port-22",
            "network_security_group_name": "websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_linuxvm_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/publicIPAddresses/bastion-linuxvm-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.172.250.58",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "bastion-linuxvm-public-ip",
            "resource_group_name": "rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/publicIPAddresses/web-lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.172.250.53",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "web-lb-public-ip",
            "resource_group_name": "rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/appsubnet",
            "name": "appsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/bastionsubnet",
            "name": "bastionsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/dbsubnet",
            "name": "dbsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/websubnet",
            "name": "websubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/appsubnet",
            "network_security_group_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/appsubnet-nsg",
            "subnet_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_inbound_rules",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/bastionsubnet",
            "network_security_group_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/bastionsubnet-nsg",
            "subnet_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_inbound_rules",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/dbsubnet",
            "network_security_group_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/dbsubnet-nsg",
            "subnet_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_inbound_rules",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/websubnet",
            "network_security_group_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/networkSecurityGroups/websubnet-nsg",
            "subnet_id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet/subnets/websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_inbound_rules",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "309e205f-e645-4545-94c3-94c0320096ab",
            "id": "/subscriptions/4851f0fb-567e-422e-a552-8740b119c0e5/resourceGroups/rg/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "eastus",
            "name": "vnet",
            "resource_group_name": "rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}